Completed trending movies section

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -13,3 +13,9 @@
         text-shadow: 2px 2px black;
     }
 }
+.trendingSection{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
