Completed home page

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -13,6 +13,10 @@
         text-shadow: 2px 2px black;
     }
 }
+.subHeading{
+    color: #0fa958;
+    margin-left: 100px;
+}
 .trendingSection{
     display: flex;
     flex-direction: row;
