--- a/styles/SearchBar.module.scss
+++ b/styles/SearchBar.module.scss
@@ -11,6 +11,7 @@
     padding: 8px 15px;
     border: 2px solid #0fa958;
     margin-bottom: 5px;
+    font-size: 18px;
 }
 .button{
     width: 300px;
