Completed "popular movies" category

--- a/styles/SearchPage.module.scss
+++ b/styles/SearchPage.module.scss
@@ -11,3 +11,9 @@
     flex-wrap: wrap;
     justify-content: center;
 }
+.title{
+    margin-top: 100px;
+    text-align: center;
+    height: 90vh;
+    font-weight: 400;
+}
